--- a/vue-flask/backend/requirements.txt
+++ b/vue-flask/backend/requirements.txt
@@ -1,8 +1,12 @@
 click==8.1.2
 Flask==2.1.1
 Flask-Cors==3.0.10
+Flask-Login==0.6.0
+Flask-WTF==1.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
 six==1.16.0
+tinydb==4.7.0
 Werkzeug==2.1.1
+WTForms==3.0.1
