--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "drawflow": "^0.0.56",
     "js-to-json-logic": "^0.1.3",
     "litegraph.js": "^0.7.10",
     "vue": "^2.6.14",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@types/drawflow": "^0.0.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
