--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -11,6 +11,12 @@
     "drawflow": "^0.0.56",
     "js-to-json-logic": "^0.1.3",
     "litegraph.js": "^0.7.10",
+    "rete": "^1.4.7",
+    "rete-area-plugin": "^0.2.1",
+    "rete-connection-plugin": "^0.9.0",
+    "rete-context-menu-plugin": "^0.6.0",
+    "rete-keyboard-plugin": "^0.1.2",
+    "rete-vue-render-plugin": "~0.5.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
