--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -28,6 +28,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "font-awesome": "^4.7.0",
+    "jshint": "^2.13.4",
     "material-design-icons-iconfont": "^6.5.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.2.1",
