--- a/vue-flask/backend/requirements.txt
+++ b/vue-flask/backend/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 json-logic==0.6.3
 MarkupSafe==2.1.1
+pytz==2022.1
 requests==2.27.1
 six==1.16.0
 tinydb==4.7.0
