--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -32,6 +32,8 @@
     "font-awesome": "^4.7.0",
     "jshint": "^2.13.4",
     "material-design-icons-iconfont": "^6.5.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.2.1",
     "vue-cli-plugin-vuetify": "~2.4.8",
