--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "dayjs": "^1.11.2",
+    "dayjs": "^1.11.3",
     "drawflow": "^0.0.56",
     "js-to-json-logic": "^0.1.3",
     "litegraph.js": "^0.7.10",
@@ -19,6 +19,8 @@
     "rete-keyboard-plugin": "^0.1.2",
     "rete-vue-render-plugin": "~0.5.1",
     "vue": "^2.6.14",
+    "vue-dayjs": "^1.0.2",
+    "vue-dayjs-plugin": "^1.0.0",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
