--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -23,13 +23,15 @@
     "vue-dayjs-plugin": "^1.0.0",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@types/drawflow": "^0.0.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "font-awesome": "^4.7.0",
     "jshint": "^2.13.4",
