--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "production": "http-server ./dist"
   },
   "dependencies": {
     "core-js": "^3.8.3",
     "dayjs": "^1.11.3",
+    "dayjs-plugin-utc": "^0.1.2",
     "drawflow": "^0.0.56",
     "js-to-json-logic": "^0.1.3",
     "litegraph.js": "^0.7.10",
+    "regenerator-runtime": "^0.13.9",
     "rete": "^1.4.7",
     "rete-area-plugin": "^0.2.1",
     "rete-connection-plugin": "^0.9.0",
@@ -34,6 +37,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "font-awesome": "^4.7.0",
+    "http-server": "^14.1.1",
     "jshint": "^2.13.4",
     "material-design-icons-iconfont": "^6.5.0",
     "pug": "^3.0.2",
