--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -8,6 +8,8 @@
     "production": "http-server ./dist"
   },
   "dependencies": {
+    "chart.js": "2.9",
+    "chat.js": "^1.0.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.3",
     "dayjs-plugin-utc": "^0.1.2",
@@ -22,6 +24,7 @@
     "rete-keyboard-plugin": "^0.1.2",
     "rete-vue-render-plugin": "~0.5.1",
     "vue": "^2.6.14",
+    "vue-chartkick": "^0.6.1",
     "vue-dayjs": "^1.0.2",
     "vue-dayjs-plugin": "^1.0.0",
     "vue-resource": "^1.5.3",
