--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -30,7 +30,8 @@
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
