--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -18,12 +18,12 @@
     "js-to-json-logic": "^0.1.3",
     "litegraph.js": "^0.7.10",
     "regenerator-runtime": "^0.13.9",
-    "rete": "^1.4.7",
+    "rete": "^1.4.8",
     "rete-area-plugin": "^0.2.1",
     "rete-connection-plugin": "^0.9.0",
     "rete-context-menu-plugin": "^0.5.2",
     "rete-keyboard-plugin": "^0.1.2",
-    "rete-vue-render-plugin": "~0.5.1",
+    "rete-vue-render-plugin": "^0.5.1",
     "vue": "^2.6.14",
     "vue-chartkick": "^0.6.1",
     "vue-dayjs": "^1.0.2",
