--- a/vue-flask/backend/http_rest/requirements.txt
+++ b/vue-flask/backend/http_rest/requirements.txt
@@ -1,27 +1,112 @@
+appdirs==1.4.4
 attrs==21.4.0
+Automat==20.2.0
+autopep8==1.6.0
+bitstring==3.1.9
+btrfsutil==5.18.1
+CacheControl==0.12.6
 cachelib==0.6.0
+ceph==1.0.0
+ceph-volume==1.0.0
+cephfs==2.0.0
+cephfs-shell==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.2
+colorama==0.4.4
+constantly==15.1.0
+contextlib2==21.6.0
 cryptography==37.0.2
+distlib==0.3.4
+distro==1.7.0
+dnspython==2.2.1
+ecdsa==0.17.0
+esptool==3.3
+filelock==3.6.0
 Flask==2.1.1
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.1
 Flask-Login==0.6.0
 Flask-Session==0.4.0
 Flask-WTF==1.0.1
+html5lib==1.1
+hyperlink==21.0.0
 idna==3.3
+importlib-metadata==4.8.1
+incremental==21.3.0
 itsdangerous==2.1.2
+jaraco.context==4.1.1
+jaraco.functools==3.5.0
+jaraco.text==3.8.0
+jellyfin-apiclient-python==1.8.1
 Jinja2==3.1.1
 json-logic==0.6.3
-jwt==1.3.1
+lensfun==0.3.3
+libmsym==0.2.4
+libtorrent==2.0.6
+Markdown==3.3.7
 MarkupSafe==2.1.1
+more-itertools==8.13.0
+msgpack==1.0.3
+netsnmp-python==1.0a1
+nspektr==0.4.0
+ordered-set==4.0.2
+packaging==21.3
+paho-mqtt==1.6.1
+pep517==0.12.0
+Pillow==9.0.1
+pipenv==2022.4.8
+platformdirs==2.5.1
+ply==3.11
+progress==1.6
+pyaes==1.6.1
+pycairo==1.21.0
+pycodestyle==2.8.0
 pycparser==2.21
+PyGObject==3.42.1
+pyinotify==0.9.6
 PyJWT==2.4.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+pyserial==3.5
+pystray==0.19.2
+python-dateutil==2.8.2
+python-Levenshtein==0.12.2
+python-mpv==0.5.2
+python-mpv-jsonipc==1.1.13
+python-xlib==0.31
 pytz==2022.1
+pyxdg==0.28
+QtPy==2.1.0
+rados==2.0.0
+rbd==2.0.0
+reedsolo==1.5.4
 requests==2.27.1
+resolvelib==0.5.5
+retrying==1.3.3
+rgw==2.0.0
 six==1.16.0
+TBB==0.2
+team==1.0
 tinydb==4.7.0
+toml==0.10.2
+tomli==2.0.1
+trove-classifiers==2022.5.19
+Twisted==21.7.0
+typing-extensions==4.2.0
+ulauncher==5.14.4
 urllib3==1.26.9
+validate-pyproject==0.9
+virtualenv==20.14.1
+virtualenv-clone==0.5.7
+webencodings==0.5.1
+websocket-client==1.3.2
 Werkzeug==2.1.1
 WTForms==3.0.1
+wxPython==4.0.7.post2
+zipp==3.8.0
+zope.interface==5.4.0
