--- a/vue-flask/frontend/package.json
+++ b/vue-flask/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "production": "http-server ./dist"
+    "production": "http-server ./dist --port 8080 --proxy http://localhost:8080?"
   },
   "dependencies": {
     "axios": "^0.27.2",
